--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <h3><a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h3>
 
-<p>UniBoxManual <a href="http://alextape.gitbooks.io/unibox/content/">Read</a> <a href="https://www.gitbook.com/download/pdf/book/alextape/unibox">Download</a></p>
+<p>UniBoxManual: Read <a href="http://alextape.gitbooks.io/unibox/content/">online</a>, download as <a href="https://www.gitbook.com/download/pdf/book/alextape/unibox">PDF</a> or visit the <a href="https://github.com/AlexTape/UniBox/wiki">GitHubWiki</a></p>
 <p>or visit the <a href="https://github.com/AlexTape/UniBox/wiki">GitHubWiki</a></p>
 
 <h3><a id="packages" class="anchor" href="#packages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Package Overview</h3>
